# CNotes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
base/: geometry.h
c_samples/: CMakeLists.txt  cptr.c  cstr.cpp  file_read_write.c  func_ptr.c  main.c  print_on_terminal.c  type_def.h  var_list_func.c
c_samples/data_struct/: cust_info_system  cust_info_system.c  dynamic_array  dynamic_array.c  linked_list.c
c_samples/thread/: pthreads_join_with_lock.c
c_samples/utils/: cstr_utils.c  cstr_utils.h
c_samples/xtd/: string.h
cc_samples/: CMakeLists.txt  main.cpp  operator_overload.cpp  pretreatment.cpp
cc_samples/multi_threads/: multi_threads.cpp  multi_threads_join.cpp  multi_threads_std.cpp
cs/: server.c
smallchat/: CMakeLists.txt
socket/cs/: CMakeLists.txt  client.c  server.c
socket/smallchat/: .gitignore  CMakeLists.txt  smallchat-client.c
tree/: CMakeLists.txt  geometry.h  main.cpp  multiway_tree.cpp  multiway_tree.h
tree/include/: binary_tree.h  multiway_tree.h
tree/src/: binary_tree.cpp  multiway_tree.cpp
